--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">androicCircle</string>
     <string name="button_press_add">Add!</string>
     <string name="button_press_minus">Reduce!</string>
+    <string name="button_press_nextactivity">Go to next</string>
 </resources>
